# pilot-hdc-upload

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COPYRIGHT  Dockerfile  README.md  gunicorn_config.py  pyproject.toml  run.py
.github/workflows/: hdc-pipeline.yml
app/: __main__.py  api_registry.py  config.py  logger.py  main.py
app/commons/: kafka_producer.py  metadata.items.activity.avsc
app/commons/data_providers/: redis.py  redis_project_session_job.py
app/components/request/: network.py
app/models/: base_models.py  folder.py  models_item.py  models_resumable_upload.py  models_upload.py
app/resources/: archive_file_type_mapping.py  decorator.py  error_handler.py  health_check.py  helpers.py  lock.py
app/routers/: api_root.py  exceptions.py
app/routers/v1/: api_data_upload.py  exceptions.py
app/routers/v1/api_resumable_upload/: api_resumable_upload.py  utils.py
tests/: conftest.py
tests/components/request/: test_network.py
tests/fixtures/: fake.py
tests/resources/: archive.7z  archive.rar  desktop.rar  test_helpers.py
tests/routers/: test_app_root.py
tests/routers/v1/api_folder_upload/: test_on_sucess.py  test_upload_chunks.py  test_upload_pre.py
tests/routers/v1/api_resumable_upload/: test_resumable.py
